apps/longhorn/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn
  namespace: longhorn
  labels:
    app: longhorn-ui
    app.kubernetes.io/instance: longhorn-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/part-of: longhorn
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: longhorn-ui
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: longhorn
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  # externalTrafficPolicy: Cluster
