apps/longhorn/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: true
    nginx.org/mergeable-ingress-type: "minion"
spec:
  tls:
    - hosts:
        - longhorn.elposhox.dev
  ingressClassName: nginx
  rules:
  - host: 'longhorn.elposhox.dev'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: longhorn
              port:
                number: 80
